# open-llm-wiki

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  api_auth.py  api_router.py  app.py  config.py  description_generator.py  exceptions.py  llm_client.py  mailer.py  manage.py  mineru_client.py  models.py  pyproject.toml  qdrant_service.py  requirements.txt  task_worker.py  token_crypto.py  utils.py  wiki_engine.py  wiki_prompts.py
confidential_client/: __init__.py  cli.py  controller.py  crypto.py  desktop.py  gui.py  health.py  manager.py  qdrant.py  repository.py  runtime.py  update.py  version.py
deploy/: llmwiki.service
docs/: design.md  private-kb-user-manual.md
llmwiki_core/: __init__.py  contracts.py  keyword_index.py  retrieval.py
migrations/: 001_init.sql  002_task_queue.sql  003_repo_is_public.sql  004_api_tokens_scopes_expiry.sql  004_query_log_full_trace.sql  004_query_logs.sql  005_query_log_trace_id.sql  005_wave3.sql  006_query_feedback.sql  006_session_title.sql  007_user_email_and_task_cancel.sql  008_email_verification.sql  009_repo_sharing.sql  011_api_tokens_cipher.sql
packaging/: appcast.sample.json  confidential-client.spec
scripts/: ab-e2e-test.sh  ab-inspect.sh  backup.sh  build-confidential-client-binary.sh  build-confidential-client.sh  build-macos-app.sh  build-windows-installer.ps1  build_llm_kb.py  deploy.sh  pack-internal-kb-assistant-zip.sh  restore.sh  sign-macos-client.sh  sign-windows-client.ps1  test_llm_kb.py  test_llmwiki_vs_rag.py
templates/: base.html  guide.html
tests/: conftest.py  test_api_router.py  (+25 more)
(+97 files in other folders)
