[project]
name = "open-llm-wiki"
version = "0.1.0"
description = "Multi-user LLM Wiki knowledge base platform"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
